--- a/db/flyway.conf
+++ b/db/flyway.conf
@@ -1,5 +1,5 @@
 #
-# Copyright © Red Gate Software Ltd 2010-2022
+# Copyright © Red Gate Software Ltd 2010-2021
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -36,22 +36,22 @@
 # PostgreSQL        : jdbc:postgresql://<host>:<port>/<database>?<key1>=<value1>&<key2>=<value2>...
 # SAP HANA*         : jdbc:sap://<host>:<port>/?databaseName=<database>
 # Snowflake*        : jdbc:snowflake://<account>.snowflakecomputing.com/?db=<database>&warehouse=<warehouse>&role=<role>...
-# SQL Server        : jdbc:sqlserver://<host>:<port>;databaseName=<database>
+#SQL Server          : jdbc:sqlserver://aristotle;databaseName=sandbox;integratedSecurity=true
 # SQLite            : jdbc:sqlite:<database>
 # Sybase ASE        : jdbc:jtds:sybase://<host>:<port>/<database>
 # Redshift*         : jdbc:redshift://<host>:<port>/<database>
-# flyway.url=
+flyway.url=jdbc:sqlserver://aristotle;instanceName=SQL2017;databaseName=way0utwest;integratedSecurity=true
 
 # Fully qualified classname of the JDBC driver (autodetected by default based on flyway.url)
 # flyway.driver=
 
 # User to use to connect to the database. Flyway will prompt you to enter it if not specified, and if the JDBC
 # connection is not using a password-less method of authentication.
-# flyway.user=
+#flyway.user=
 
 # Password to use to connect to the database. Flyway will prompt you to enter it if not specified, and if the JDBC
 # connection is not using a password-less method of authentication.
-# flyway.password=
+#flyway.password=
 
 # The maximum number of retries when attempting to connect to the database. After each failed attempt,
 # Flyway will wait 1 second before attempting to connect again, up to the maximum number of times specified
@@ -72,7 +72,7 @@
 # Consequences:
 # - This schema will be the one containing the schema history table.
 # - This schema will be the default for the database connection (provided the database supports this concept).
-# flyway.defaultSchema=
+# flyway.defaultSchema=dbo
 
 # Comma-separated list of the schemas managed by Flyway. These schema names are case-sensitive. If not specified, Flyway uses
 # the default schema for the database connection. If flyway.defaultSchema is not specified, then the first of
@@ -114,7 +114,7 @@
 # *  : Matches any 0 or more non-separator characters
 # ?  : Matches any 1 non-separator character
 #
-flyway.locations=filesystem:migrations
+flyway.locations=filesystem:sql
 
 # Whether to fail if a location specified in the flyway.locations option doesn't exist (default: false)
 # flyway.failOnMissingLocations=
@@ -217,7 +217,6 @@ flyway.locations=filesystem:migrations
 # Special values:
 # - 'current': designates the current version of the schema
 # - 'latest': the latest version of the schema, as defined by the migration with the highest version
-# - 'next': the next version of the schema, as defined by the first pending migration
 # - '<version>?' (end with a '?'): Instructs Flyway not to fail if the target version doesn't exist.
 #                                  In this case, Flyway will go up to but not beyond the specified target
 #                                  (default: fail if the target version doesn't exist) - Flyway Teams only
@@ -414,17 +413,8 @@ flyway.locations=filesystem:migrations
 # Flyway Teams only
 # flyway.oracle.sqlplusWarn=
 
-# When connecting to a Kerberos service to authenticate, the path to the Kerberos config file.
-# Flyway Teams only
-# flyway.kerberosConfigFile
-
 # Your Flyway license key (FL01...). Not yet a Flyway Teams Edition customer?
 # Request your Flyway trial license key st https://flywaydb.org/download/
 # to try out Flyway Teams Edition features free for 30 days.
 # Flyway Teams only
 # flyway.licenseKey=
-flyway.mixed=true
-flyway.outOfOrder=true
-flyway.plugins.clean.mode=all
-flyway.createSchemas=false
-flyway.defaultSchema=dbo
